# Source/DocuEye.ViewsKeeper.Api.Model/MermaidDiagram.cs
@@ -1,0 +1,11 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace DocuEye.ViewsKeeper.Api.Model
+{
+    public class MermaidDiagram
+    {
+        public string Content { get; set; } = null!;
+    }
+}
