# Source/DocuEye.Web/client-app/app/api/docueye-api/models/index.ts
@@ -37,7 +37,6 @@ export * from './import-elements-request';
 export * from './import-finalize-request';
 export * from './import-image-request';
 export * from './import-issues-request';
-export * from './import-open-api-file-request';
 export * from './import-relationships-request';
 export * from './import-view-configuration-request';
 export * from './import-views-request';
@@ -51,6 +50,7 @@ export * from './issue-relationship-to-import';
 export * from './issue-rule';
 export * from './issue-rule-to-import';
 export * from './issue-to-import';
+export * from './mermaid-diagram';
 export * from './model-change';
 export * from './relationship-in-view-to-import';
 export * from './relationship-style';
