# Source/DocuEye.Web/client-app/app/api/docueye-api/models/mermaid-diagram.ts
@@ -1,0 +1,21 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * DocuEye.Web
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+
+export interface MermaidDiagram {
+    'content'?: string | null;
+}
+
